Fix link icon on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,6 +125,10 @@ h4 {
       [data-theme='dark'] & {
         filter: invert(1) opacity(0.5);
       }
+
+      @media (max-width: 75ch) {
+        left: -1.5rem;
+      }
     }
 
     &:hover::before {
